--- a/src/UI_Components/NavigationItems/NavigationItem/navigationItem.module.css
+++ b/src/UI_Components/NavigationItems/NavigationItem/navigationItem.module.css
@@ -6,11 +6,12 @@
 }
 
 .NavigationItem a {
-    color: #13db4f;
+    color: #1381db;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
     display: block;
+    float: right;
 }
 
 .NavigationItem a:hover,
@@ -38,8 +39,8 @@
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
-        background-color: #14c27f;
-        border-bottom: 4px solid #40A4C8;
+        background-color: #143dc2;
+        border-bottom: 4px solid #5940c8;
         color: white;
     }
 }
