--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -6,8 +6,9 @@
     cursor: pointer;
     font: inherit;
     padding: 10px;
-    margin: 50px;
+    margin: 10px;
     font-weight: bold;
+    text-align: center;
 }
 
 .Button:first-of-type {
